// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field.Email for Resource.Form Empty 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <div
      class="control is-clearfix"
    >
      <input
        autocomplete="on"
        class="input"
        type="email"
      />
       
      <!---->
       
      <!---->
       
      <!---->
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Email for Resource.Form With value, label and icon 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <label
      class="label"
    >
      My field label
    </label>
     
    <div
      class="control has-icons-left is-clearfix"
    >
      <input
        autocomplete="on"
        class="input"
        maxlength="10"
        placeholder="An explicit placeholder"
        type="email"
      />
       
      <span
        class="icon is-left"
      >
        <i
          class="fa fa-user fa-lg"
        />
      </span>
       
      <!---->
       
      <small
        class="help counter is-invisible"
      >
        
            8 / 10
        
      </small>
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Email for Resource.Form With value, label and icon with incorrect email 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <label
      class="label"
    >
      My field label
    </label>
     
    <div
      class="control has-icons-left is-clearfix"
    >
      <input
        autocomplete="on"
        class="input"
        maxlength="10"
        placeholder="An explicit placeholder"
        type="email"
      />
       
      <span
        class="icon is-left"
      >
        <i
          class="fa fa-user fa-lg"
        />
      </span>
       
      <!---->
       
      <small
        class="help counter is-invisible"
      >
        
            8 / 10
        
      </small>
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Email for Resource.Form With value, label, readonly 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <label
      class="label"
    >
      My field label
    </label>
     
    <div>
      <span>
        my@feret
      </span>
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Email for Resource.Form With value, label, readonly and slot 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <label
      class="label"
    >
      My field label
    </label>
     
    <div>
      <div>
        my@feret 
        <br />
         my@feret
      </div>
    </div>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Email for Resource.List Empty 1`] = `
<div>
  <span>
    
  </span>
</div>
`;

exports[`Field.Email for Resource.List With value 1`] = `
<div>
  <span>
    my@feret
  </span>
</div>
`;

exports[`Field.Email for Resource.List With value and slot 1`] = `
<div>
  <div>
    my@feret 
    <br />
     my@feret
  </div>
</div>
`;

exports[`Field.Email for Resource.Thumbnail Empty 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <span>
      
    </span>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Email for Resource.Thumbnail With value 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <span>
      my@feret
    </span>
     
    <!---->
  </div>
</span>
`;

exports[`Field.Email for Resource.Thumbnail With value and slot 1`] = `
<span
  class="is-primary is-top is-medium b-tooltip"
  data-label=""
  style="transition-delay: 0ms; width: 100%;"
>
  <div
    class="field"
    style="width: inherit;"
  >
    <!---->
     
    <div>
      my@feret 
      <br />
       my@feret
    </div>
     
    <!---->
  </div>
</span>
`;
